feat: add Analytics component and update deployment scripts

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next build && next export",
+    "export": "next build",
     "start": "next start",
-    "deploy": "npm run export && npx gh-pages -d out -b gh-pages",
+    "deploy": "npm run build && npx gh-pages -d out -b gh-pages",
     "lint": "eslint"
   },
   "dependencies": {
