fix: add missing environment declaration in build job for GitHub Pages

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -17,6 +17,8 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
     env:
       NEXT_PUBLIC_GOATCOUNTER_URL: ${{ vars.NEXT_PUBLIC_GOATCOUNTER_URL }}
     steps:
